--- a/app/components/css/List.css
+++ b/app/components/css/List.css
@@ -1,1 +1,24 @@
-body{ background-color: darkgray; }
+.hidden{ display: none; }
+
+.pagination{ 
+	list-style-type: none; 
+	display: inline-flex;
+	list-style:none;
+	padding:0;
+}
+
+.pagination li{
+	padding: 4px;
+    box-shadow: 1px 1px 1px #000;
+    border-radius: 3px;
+    width: 30px;
+    text-align: center;
+    margin: 0 3px 0 3px;
+}
+
+.pagination li a{
+	color: #000;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 18px;
+}
